@@ -9,6 +9,7 @@
 #include <unistd.h>
 #endif
 
+#include <filemgr.h>
 #include <lzsscomprs.h>
 
 using namespace std;
@@ -74,7 +75,7 @@ int main(int argc, char **argv) {
 		bookpath += "/";
 
 	fileName = bookpath + "Book.dat";
-	int fd = open(fileName.c_str(), O_RDONLY|O_BINARY, S_IREAD|S_IWRITE|S_IRGRP|S_IROTH);
+	int fd = FileMgr::openFileReadOnly(fileName.c_str());
 
 	if (fd < 1) {
 		cerr << "error, couldn't open file: " << fileName << "\n";
@@ -87,7 +88,7 @@ int main(int argc, char **argv) {
 
 
 	fileName = bookpath + "Viewable.idx";
-	int fdv = open(fileName.c_str(), O_RDONLY|O_BINARY, S_IREAD|S_IWRITE|S_IRGRP|S_IROTH);
+	int fdv = FileMgr::openFileReadOnly(fileName.c_str());
 
 	if (fdv < 1) {
 		cerr << "error, couldn't open file: " << fileName << "\n";
